--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
         /* --- CONTROLS (BOTTOM) --- */
         .controls {
             position: absolute;
-            bottom: 30px;
+            bottom: 60px;
             width: 100%;
             display: flex;
             justify-content: space-between;
@@ -164,12 +164,12 @@
         }
 
         .control-btn {
-            width: 80px;
-            height: 80px;
-            background: rgba(255, 255, 255, 0.1);
+            width: 90px;
+            height: 90px;
+            background: rgb(230, 80, 80);
             backdrop-filter: blur(5px);
             border: 1px solid rgba(255, 255, 255, 0.3);
-            border-radius: 50%;
+            border-radius: 45%;
             color: white;
             font-size: 40px;
             display: flex;
